<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手指快点之笑脸</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数:</string>
    <string name="best_score">最高分:</string>
    <string name="ready">ready</string>
    <string name="go">go</string>
    <string name="total_click_count">一共点击(次):</string>
    <string name="smile_face_click_count">点击笑脸(次):</string>
    <string name="click_speed">点击速度(次/秒):</string>
    <string name="reward_score">速度奖励得分:</string>
    <string name="total_score">总分:</string>
    <string name="quit">退出</string>
    <string name="restart">再挑战一次</string>
    <string name="show_msg">点到红心，生命值满咯</string>
    <string name="level">第%d关</string>
    <string name="action_description">请快速按顺序点击下列表情:</string>
    <string name="pass_level_condition">过关条件:</string>
    <string name="level_pass_condition_descriptin">成功完成%d组点击</string>
   

</resources>
