
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    tools:context=".MainActivity" >
	
	    <ProgressBar
	        android:id="@+id/progressBar"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:max="60"
	        android:progress="60" />
	
	    <TextView
	        android:id="@+id/currentScoreView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/progressBar"
	        android:textSize="30sp"
	        android:text="@string/score" />
	
	    <TextView
	        android:id="@+id/bestScoreView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/progressBar"
	        android:textSize="30sp"
	        android:text="@string/best_score" />
	
	    <com.echo.junkman.smileface.GameView
	        android:id="@+id/gameView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/currentScoreView" />
	    
	      <FrameLayout
            android:id="@+id/banner_ad_container"
            android:layout_marginTop="15dip"
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:layout_below="@id/gameView"
            android:layout_alignParentBottom="true"/>
	</RelativeLayout>
    <TextView
     android:id="@+id/countDownView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/darkgray"
     android:alpha="0.8"
   
     android:textSize="80sp"
     android:text="@string/ready" />
	

</FrameLayout>
