<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="5dip"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dip"
        android:layout_height="80dip" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/image_0" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dip"
            android:layout_marginLeft="5dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/image_0" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginLeft="5dip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/image_0" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_marginLeft="5dip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/image_0" />
        <ImageView
            android:id="@+id/imageView5"
            android:layout_marginLeft="5dip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/image_0" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_level_condition"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_level_condition_descriptin" />

    <Button
        android:id="@+id/button1"
        android:layout_marginTop="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

</LinearLayout>
